--- a/src/mqttnet.broker/Properties/launchSettings.json
+++ b/src/mqttnet.broker/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5115",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:6443",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -12,8 +12,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7232;http://localhost:5115",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:64430;http://localhost:6443",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
