--- a/src/mqttnet.broker/Dockerfile
+++ b/src/mqttnet.broker/Dockerfile
@@ -1,7 +1,10 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+#EXPOSE 80
+#EXPOSE 443
+EXPOSE 64430
+EXPOSE 4430
+EXPOSE 1883
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
