--- a/src/mqttnet.publisher/mqttnet.publisher.csproj
+++ b/src/mqttnet.publisher/mqttnet.publisher.csproj
@@ -18,4 +18,9 @@
     <PackageReference Include="MQTTnet.AspNetCore" Version="4.1.4.563" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MQTTnet.AspNetCore.BackgroundServices\MQTTnet.AspNetCore.BackgroundServices.csproj" />
+    <ProjectReference Include="..\MQTTnet.AspNetCore.DependencyInjection\MQTTnet.AspNetCore.DependencyInjection.csproj" />
+  </ItemGroup>
+
 </Project>
