--- a/src/mqttnet.broker/mqttnet.broker.csproj
+++ b/src/mqttnet.broker/mqttnet.broker.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MQTTnet" Version="4.1.4.563" />
     <PackageReference Include="MQTTnet.AspNetCore" Version="4.1.4.563" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.86" />
   </ItemGroup>
 
 </Project>
