--- a/src/mqttnet.publisher/mqttnet.publisher.csproj
+++ b/src/mqttnet.publisher/mqttnet.publisher.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="MQTTnet" Version="4.1.4.563" />
     <PackageReference Include="MQTTnet.AspNetCore" Version="4.1.4.563" />
+    <PackageReference Include="MQTTnet.Extensions.ManagedClient" Version="4.1.4.563" />
   </ItemGroup>
 
 </Project>
