整理程式碼、將 server / client 等工具用專案整理分類

--- a/src/mqttnet.broker/mqttnet.broker.csproj
+++ b/src/mqttnet.broker/mqttnet.broker.csproj
@@ -19,7 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MQTTnet.AspNetCore.Server.ClusterQueue\MQTTnet.AspNetCore.Server.ClusterQueue.csproj" />
+      <ProjectReference Include="..\MQTTnet.AspNetCore.Server.Cluster\MQTTnet.AspNetCore.Server.Cluster.csproj" />
     </ItemGroup>
 
 </Project>
