MQTTnet.AspNetCore.Server 專案內加入各事件的 Middleware

--- a/src/mqttnet.broker/mqttnet.broker.csproj
+++ b/src/mqttnet.broker/mqttnet.broker.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MQTTnet.AspNetCore.Server.Cluster\MQTTnet.AspNetCore.Server.Cluster.csproj" />
+      <ProjectReference Include="..\MQTTnet.AspNetCore.Server\MQTTnet.AspNetCore.Server.csproj" />
     </ItemGroup>
 
 </Project>
