--- a/src/MQTTnet.AspNetCore.Server/MQTTnet.AspNetCore.Server.csproj
+++ b/src/MQTTnet.AspNetCore.Server/MQTTnet.AspNetCore.Server.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net7.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MQTTnet" Version="4.1.4.563" />
-    <PackageReference Include="MQTTnet.AspNetCore" Version="4.1.4.563" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="MQTTnet" Version="4.1.4.563"/>
+        <PackageReference Include="MQTTnet.AspNetCore" Version="4.1.4.563"/>
+        <PackageReference Include="StackExchange.Redis" Version="2.6.86"/>
+    </ItemGroup>
 
 </Project>
