--- a/src/mqttnet.client.publisher/Dockerfile
+++ b/src/mqttnet.client.publisher/Dockerfile
@@ -1,9 +1,10 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+﻿FROM ghcr.io/yuchia-wei/otel-dotnet-auto-instrumentation:8.0-alpine AS base
 WORKDIR /app
 EXPOSE 80
+EXPOSE 8080
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 WORKDIR /src
 COPY ["mqttnet.client.publisher/mqttnet.client.publisher.csproj", "mqttnet.client.publisher/"]
 COPY ["MQTTnet.AspNetCore.Client.BackgroundServices/MQTTnet.AspNetCore.Client.BackgroundServices.csproj", "MQTTnet.AspNetCore.Client.BackgroundServices/"]
