--- a/src/clients/mqttnet.client.subscriber/mqttnet.client.subscriber.csproj
+++ b/src/clients/mqttnet.client.subscriber/mqttnet.client.subscriber.csproj
@@ -1,15 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Content Include="..\..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="MQTTnet" Version="4.3.3.952" />
         <PackageReference Include="MQTTnet.AspNetCore" Version="4.3.3.952" />
-        <PackageReference Include="StackExchange.Redis" Version="2.7.17" />
     </ItemGroup>
 
 </Project>
