--- a/src/nuget-packages/MQTTnet.AspNetCore.Server.Cluster/MQTTnet.AspNetCore.Server.Cluster.csproj
+++ b/src/nuget-packages/MQTTnet.AspNetCore.Server.Cluster/MQTTnet.AspNetCore.Server.Cluster.csproj
@@ -1,21 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
-        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
-
-    <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
-    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="MQTTnet" Version="4.3.3.952" />
         <PackageReference Include="MQTTnet.AspNetCore" Version="4.3.3.952" />
+        <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
     </ItemGroup>
 
 </Project>
